add password to payload

--- a/ESP8266Ovi/ESP8266Ovi/data/index.html
+++ b/ESP8266Ovi/ESP8266Ovi/data/index.html
@@ -32,7 +32,12 @@
 
     <script>
       function sendData() {
-        console.log("test");
+        var passw = document.getElementById("password").value;
+        
+        var message = {
+          p: passw,
+        };
+        console.log(passw);
         package.send(message);
       }
     </script>
