display for light level

--- a/ESP8266Ovi/ESP8266Ovi/data/index.html
+++ b/ESP8266Ovi/ESP8266Ovi/data/index.html
@@ -22,14 +22,16 @@
     </style>
     <div class="form-box">
       <div>
+        <div>
+          <h3>Room Light level</h3>
+          <p id="lightLevel"></p>
+        </div>
         <div><h3>Password</h3></div>
         <div>
           <input type="password" id="password" />
           <input type="submit" class="btn btn-primary" onclick="sendData()" />
         </div>
-        <div>
-          <p id="status">No connection</p>
-        </div>
+        <div><p id="status">No connection</p></div>
       </div>
     </div>
     <script>
