--- a/ESP8266Ovi/ESP8266Ovi/data/index.html
+++ b/ESP8266Ovi/ESP8266Ovi/data/index.html
@@ -13,24 +13,31 @@
 
   <body>
     <style>
-      .form-group {
+      .container {
         max-width: 500px;
         margin: auto;
-
         padding: 10px;
       }
     </style>
     <div class="form-box">
-      <div>
-        <div>
-          <h3>Room Light level</h3>
-          <p id="lightLevel"></p>
+      <div class="container center-block">
+        <div class="row ">
+          <div class="col-8"><h3>Room Light level</h3></div>
+          <div class="col-2"><h3 id="lightLevel"></h3></div>
         </div>
-        <div><h3>Password</h3></div>
-        <div>
-          <input type="password" id="password" />
-          <input type="submit" class="btn btn-primary" onclick="sendData()" />
+
+        <br />
+        <div class="row ">
+          <div class="col-10"><h3>Password</h3></div>
         </div>
+
+        <div class="row ">
+          <div class="col-6"><input type="password" id="password" /></div>
+          <div class="col-2">
+            <input type="submit" class="btn btn-primary" onclick="sendData()" />
+          </div>
+        </div>
+
         <div><p id="status">No connection</p></div>
       </div>
     </div>
