--- a/ESP8266Ovi/ESP8266Ovi/data/index.html
+++ b/ESP8266Ovi/ESP8266Ovi/data/index.html
@@ -16,25 +16,26 @@
       .container {
         max-width: 500px;
         margin: auto;
+        margin-top: 20px;
         padding: 10px;
       }
     </style>
     <div class="form-box">
       <div class="container center-block">
         <div class="row ">
-          <div class="col-8"><h3>Room Light level</h3></div>
+          <div class="col-8"><h3>Huoneen valaistustaso</h3></div>
           <div class="col-2"><h3 id="lightLevel"></h3></div>
         </div>
 
         <br />
         <div class="row ">
-          <div class="col-10"><h3>Password</h3></div>
+          <div class="col-10"><h3>Oven avaus</h3></div>
         </div>
 
         <div class="row ">
           <div class="col-6"><input type="password" id="password" /></div>
           <div class="col-2">
-            <input type="submit" class="btn btn-primary" onclick="sendData()" />
+            <input type="submit" title="Lähetä" class="btn btn-primary" onclick="sendData()" />
           </div>
         </div>
 
