--- a/ESP8266Ovi/ESP8266Ovi/data/index.html
+++ b/ESP8266Ovi/ESP8266Ovi/data/index.html
@@ -8,7 +8,7 @@
   <script src="socket.js"></script>
   <head>
     <link rel="stylesheet" type="text/css" href="bootstrap.min.css" />
-    <title>Title</title>
+    <title>Ovi</title>
   </head>
 
   <body>
@@ -35,7 +35,12 @@
         <div class="row ">
           <div class="col-6"><input type="password" id="password" /></div>
           <div class="col-2">
-            <input type="submit" title="Lähetä" class="btn btn-primary" onclick="sendData()" />
+            <input
+              type="submit"
+              value="Lähetä"
+              class="btn btn-primary"
+              onclick="sendData()"
+            />
           </div>
         </div>
 
@@ -50,8 +55,12 @@
           p: passw
         };
         console.log(passw);
+
+        if (passw !== "") {
+          package.send(message);
+        }
         document.getElementById("password").value = "";
-        package.send(message);
+
       }
       setInterval(checkConnection, 3000);
     </script>
